--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
         </div>
         <div class="logo-ribbon">
             <div class="logo-track">
-                <img src="images/Clover.svg" alt="clover">
-                <img src="images/Expedia.svg" alt="Expedia">
-                <img src="images/Baron.svg" alt="Baron">
-                <img src="images/ETS.svg" alt="ETS">
-                <img src="images/Lucid.svg" alt="Lucid">
-                <img src="images/Identity.svg" alt="identity">
-                <img src="images/Microsoft.svg" alt="microsoft">
-                <img src="images/Under_armour.svg" alt="under_armour">
-                <img src="images/nfl.webp" alt=" NFL">
-                <img src="images/NEOM.svg" alt="Neom">
-                <img src="images/Comcast.svg" alt="Comcast">
-                <img src="images/Zappos.svg" alt="Zappos">
-                <img src="images/Toefl.svg" alt="Toefl">
-                <img src="images/AVIS.svg" alt="Avis">
+                <img src="images/" alt="clover">
+                <img src="images//Expedia.webp" alt="Expedia">
+                <img src="images//Baron.webp" alt="Baron">
+                <img src="images/ETS.webp" alt="ETS">
+                <img src="images/Lucid.webp" alt="Lucid">
+                <img src="images/Identity.webp" alt="identity">
+                <img src="images/Microsoft.webp" alt="microsoft">
+                <img src="images/Under_armour.webp" alt="under_armour">
+                <img src="images/NFL.webp" alt=" NFL">
+                <img src="images/NEOM.webp" alt="Neom">
+                <img src="images/Comcast.webp" alt="Comcast">
+                <img src="images/Zappos.webp" alt="Zappos">
+                <img src="images/Toefl.webp" alt="Toefl">
+                <img src="images/AVIS.webp" alt="Avis">
             </div>
         </div>
 
