updating nfl element image

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h5>2025</h5>
             </div>
              <div class = "elem">
-                <img src ="images/nfl.webp" alt="">
+                <img src ="images/NFL.webp" alt="">
                 <h1>nfl</h1>
                 <h5>2025</h5>
             </div>
@@ -90,7 +90,7 @@
         </div>
         <div class="logo-ribbon">
             <div class="logo-track">
-                <img src="images/" alt="clover">
+                <img src="images/Clover.webp" alt="clover">
                 <img src="images//Expedia.webp" alt="Expedia">
                 <img src="images//Baron.webp" alt="Baron">
                 <img src="images/ETS.webp" alt="ETS">
