updating NFLnew element image

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h5>2025</h5>
             </div>
              <div class = "elem">
-                <img src ="images/NFL.webp" alt="">
+                <img src ="images/NFLnew.webp" alt="">
                 <h1>nfl</h1>
                 <h5>2025</h5>
             </div>
