updating NFLnew element image name

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
              <div class = "elem">
                 <img src ="images/NFLnew.webp" alt="">
-                <h1>nfl</h1>
+                <h1>NFLnew</h1>
                 <h5>2025</h5>
             </div>
             <div class = "elem">
