--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             </div>
             <div id ="heading">
                 <div class ="bounding">
-                    <h1 class ="boundingelement">Product</h1>
+                    <h1 class ="boundingelement">Shivam</h1>
                 </div>
                 <div class="blocktext">
                     <div class ="bounding">
-                        <h1 class ="boundingelement" id="secondh1">Designer</h1>
+                        <h1 class ="boundingelement" id="secondh1">Portfolio</h1>
                     </div>
                     <div class ="bounding">
                         <h5 class="boundingelement">Based in toronto</h5>
